--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@sindresorhus/is": "^4.0.0"
   }
 }
