--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "version": "0.1.1",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/claxed.cjs.js",
   "files": [
     "dist",
     "src"
@@ -12,12 +11,7 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "build": "rollup -c"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -47,18 +41,15 @@
     }
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@size-limit/preset-small-lib": "^4.9.2",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "husky": "^4.3.8",
+    "husky": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "size-limit": "^4.9.2",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "rollup": "^2.42.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "size-limit": "^4.9.2"
   },
-  "dependencies": {
-    "@sindresorhus/is": "^4.0.0"
-  }
+  "dependencies": {}
 }
