--- a/package.json
+++ b/package.json
@@ -51,7 +51,5 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "size-limit": "^4.9.2"
   },
-  "dependencies": {
-    "@sindresorhus/is": "^4.0.0"
-  }
+  "dependencies": {}
 }
