--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "rollup -cw",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -41,10 +42,16 @@
     }
   ],
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@size-limit/preset-small-lib": "^4.9.2",
+    "@testing-library/react": "^11.2.5",
+    "babel-jest": "^26.6.3",
     "husky": "^5.2.0",
+    "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rollup": "^2.42.2",
