--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "name": "claxed",
+  "author": "Tommaso Poletti",
   "version": "0.1.1",
   "license": "MIT",
   "main": "dist/claxed.cjs.js",
+  "jsnext:main": "dist/claxed.esm.js",
+  "module": "dist/claxed.esm.js",
+  "browser": {
+    "./dist/claxed.esm.js": "./dist/claxed.browser.esm.js",
+    "./dist/claxed.cjs.js": "./dist/claxed.browser.cjs.js"
+  },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
@@ -14,21 +21,15 @@
     "build": "rollup -c",
     "test": "jest"
   },
-  "peerDependencies": {
-    "react": ">=16"
-  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "claxed",
-  "author": "Tommaso Poletti",
-  "module": "dist/claxed.esm.js",
   "size-limit": [
     {
-      "path": "dist/claxed.cjs.production.min.js",
+      "path": "dist/claxed.cjs.js",
       "limit": "10 KB"
     },
     {
@@ -36,6 +37,9 @@
       "limit": "10 KB"
     }
   ],
+  "peerDependencies": {
+    "react": ">=16"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
@@ -52,5 +56,12 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "size-limit": "^4.9.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "react",
+    "css",
+    "classes",
+    "components",
+    "styling"
+  ]
 }
